--- a/3b-adding-backend-code-with-api-routes/package.json
+++ b/3b-adding-backend-code-with-api-routes/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "swr": "^0.4.2"
+    "library-parser": "^1.1.0",
+    "next": "^13.4.12",
+    "postcss": "^8.4.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.0"
   }
 }
