--- a/3b-adding-backend-code-with-api-routes/package.json
+++ b/3b-adding-backend-code-with-api-routes/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "library-parser": "^1.1.0",
+    "mongodb": "^5.7.0",
     "next": "^13.4.12",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
