--- a/4-adding-authentication/package.json
+++ b/4-adding-authentication/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "bcrypt": "^5.1.1",
+    "mongodb": "^5.8.0",
+    "next": "13.4.19",
+    "next-auth": "^4.23.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
